# KP-GDV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
KinectPrototyp/: Makefile  main.cpp
Kinjo/: Kinjo.sln
Kinjo/Kinjo/: Kinjo.cpp  Kinjo.vcxproj  Kinjo.vcxproj.filters  KinjoRequirements.props  OpenCVIncludes.props
Kinjo/Kinjo/include/kinjo/: Arm.hpp  ArmFactory.hpp  JacoArm.hpp  OpenNiVision.hpp  Vision.hpp
Kinjo/Kinjo/include/kinjo/arm/: Arm.hpp  ArmFactory.hpp  JacoArm.hpp
Kinjo/Kinjo/include/kinjo/vision/: OpenNiVision.hpp  Vision.hpp
Kinjo/Kinjo/include/libkindrv/: ex_ctrl.cpp  exception.cpp  kindrv.cpp
Kinjo/Kinjo/src/: JacoArm.cpp  Kinjo.cpp  OpenNiVision.cpp
Kinjo/Kinjo/src/arm/: JacoArm.cpp
Kinjo/Kinjo/src/vision/: OpenNiVision.cpp
MinimalArm/MinimalArm/: .Kinect.cpp.swp  .Kinect.h.swp  Kinect.h  Makefile  MinimalArm  MinimalArm.cpp  MinimalArm.vcxproj  MinimalArm.vcxproj.filters  ReadMe.txt  stdafx.cpp
MinimalArm/MinimalArm/Debug/: vc120.idb
MinimalArm/MinimalArm/Debug/MinimalArm.tlog/: CL.read.1.tlog  CL.write.1.tlog  MinimalArm.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MinimalArm/MinimalArm/Release/MinimalArm.tlog/: CL.read.1.tlog  CL.write.1.tlog  MinimalArm.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MinimalArm/MinimalArm/libkindrv/: kindrv.cpp  kindrv.h
cmake/: FindOpenNI.cmake  Findlibusb-1.0.cmake
doc/: kinjo.uxf  mocking.uxf  references.bib  state_grasp.uxf  states.uxf
doc/presentations/interim/: .gitignore  Makefile  additional.bib  presentation.tex
doc/presentations/interim/content/: arm.tex  calibration.tex  demo.tex  grasp.tex  introduction.tex  outlook.tex  recognition.tex  tests.tex  vision.tex
doc/presentations/interim/graphics/: architecture.uxf  architecture_2.uxf
evalulation/: eval-Result.csv  evaluation.cpp
include/kinjo/: Arm.hpp  JacoArm.hpp  JsonHandler.hpp  OpenNiVision.hpp  RenderHelper.hpp  Vision.hpp
include/kinjo/app/: CalibrationState.hpp  ColoredCircleBasedCalibrationState.hpp  GraspState.hpp  GraspingState.hpp  InitialState.hpp  Keys.hpp  ReadyState.hpp  State.hpp
include/kinjo/arm/: Arm.hpp  ArmFactory.hpp  CylindricMovementGuard.hpp  JacoArm.hpp  MockArm.hpp  MovementGuard.hpp  MovementGuardOne.hpp
include/kinjo/calibration/: AutomaticCalibrator.hpp  Calibration.hpp  CalibrationPointGenerator.hpp  Calibrator.hpp  HardCodedCalibrator.hpp  MockCalibrationPointGenerator.hpp  RandomCalibrationPointGenerator.hpp
include/kinjo/config/: Config.hpp
include/kinjo/grasp/: BoxDropStrategy.hpp  DropStrategy.hpp  Grasper.hpp  PickStrategy.hpp  SimplePickAndDropGrasper.hpp  SimpleTableDropStrategy.hpp  SimpleTablePickStrategy.hpp
include/kinjo/mock/: DataProvider.hpp  DirectoryBasedDataProvider.hpp  MockArm.hpp  TestdataMock.hpp
include/kinjo/recognition/: ColorBasedCircleRecognizer.hpp  ManualRecognizer.hpp  Recognition.hpp  Recognizer.hpp
include/kinjo/util/: Config.hpp  RenderHelper.hpp
include/kinjo/vision/: OpenNiVision.hpp  Vision.hpp
prototypes/freenect/: Makefile
prototypes/jacoarm/: MinimalArm.sln
prototypes/jacoarm/MinimalArm/: Kinect.cpp  Kinect.h  MinimalArm.cpp  MinimalArm.pro  MinimalArm.vcxproj  MinimalArm.vcxproj.filters  evaluation.cpp
prototypes/jacoarm/MinimalArm/libkindrv/: kindrv.cpp
prototypes/openni/: Makefile  vision.cpp
resources/: CalibrationMatrix.json  config.json  logging.conf
src/: JsonHandler.cpp  Kinjo.cpp  OpenNiVision.cpp  RenderHelper.cpp
src/app/: CalibrationState.cpp  ColoredCircleBasedCalibrationState.cpp  GraspState.cpp  InitialState.cpp  ReadyState.cpp
src/arm/: ArmFactory.cpp  CylindricMovementGuard.cpp  JacoArm.cpp  MockArm.cpp  MovementGuardOne.cpp
src/calibration/: AutomaticCalibrator.cpp  Calibration.cpp  HardCodedCalibrator.cpp  MockCalibrationPointGenerator.cpp  RandomCalibrationPointGenerator.cpp
src/config/: Config.cpp
src/grasp/: BoxDropStrategy.cpp  SimplePickAndDropGrasper.cpp  SimpleTableDropStrategy.cpp  SimpleTablePickStrategy.cpp
src/mock/: DirectoryBasedDataProvider.cpp  MockArm.cpp  TestdataMock.cpp
src/recognition/: ColorBasedCircleRecognizer.cpp  ManualRecognizer.cpp  Recognition.cpp
src/util/: Config.cpp  RenderHelper.cpp
src/vision/: OpenNiVision.cpp  Vision.cpp
test/: .gitignore  DepthImageTest.cpp  DirectoryBasedDataProviderTest.cpp  Makefile  OpenNiVisionTest  OpenNiVisionTest.cpp  RigidBodyTransformationTest.cpp  TestdataGenerator.cpp  TestdataMockTest.cpp  convert.sh  testdata.sh
